crates/musli-web-macros/tests/ui/invalid-id-error.rs
musli_web_macros::define! {
    #[musli(id = 0)]
    type Type1;

    #[musli(id = 32768)]
    type Type2;
}

fn main() {}